Modififications of homepage

--- a/application/layouts/scripts/homelayout.phtml
+++ b/application/layouts/scripts/homelayout.phtml
@@ -34,7 +34,7 @@
 <div class="row">
     <div class="large-12 columns">
       
-  <ul data-orbit data-options="timer_speed:2500; bullets:false;">
+  <ul data-orbit data-options="timer_speed:2500; bullets:false;swipe: true">
   <li>
     <img style="height:300px;width:1000px;" src="/zend-app/application/views/css/foundation-4.1.1/img/banners/banner1.jpeg" />
     
